--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -96,6 +96,8 @@
   img {
     max-width: 175px;
     border-radius: 50%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
 
     @include breakpoint($large) {
       padding: 5px;
